# ChangeLog for net-p2p/ghostwhitecrab
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ghostwhitecrab/Attic/ChangeLog,v 1.9 2007/01/21 17:12:06 armin76 Exp $

  21 Jan 2007; Raúl Porcel <armin76@gentoo.org>
  -ghostwhitecrab-0.9.1.ebuild, -ghostwhitecrab-0.9.2.ebuild:
  Drop old

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ghostwhitecrab-0.9.7.2.ebuild:
  hppa stable, bug #137287

  25 Jul 2006; Joshua Jackson <tsunam@gentoo.org>
  ghostwhitecrab-0.9.7.2.ebuild:
  Stable x86; bug #137287

  19 Jun 2006; Jon Hood <squinky86@gentoo.org>
  ghostwhitecrab-0.9.7.2.ebuild:
  Stable on amd64.

*ghostwhitecrab-0.9.7.2 (15 May 2006)

  15 May 2006; Jon Hood <squinky86@gentoo.org>
  -ghostwhitecrab-0.9.6.1.ebuild, +ghostwhitecrab-0.9.7.2.ebuild:
  Version bump, remove buggy version in favor of one with more options and
  less problems.

*ghostwhitecrab-0.9.6.1 (26 Apr 2006)

  26 Apr 2006; Jon Hood <squinky86@gentoo.org> ghostwhitecrab-0.9.1.ebuild,
  ghostwhitecrab-0.9.2.ebuild, +ghostwhitecrab-0.9.6.1.ebuild:
  Version bump, fix url issues. Add ~amd64 since that's what I'm testing on

*ghostwhitecrab-0.9.2 (01 Feb 2005)

  01 Feb 2005; Jon Hood <squinky86@gentoo.org> ghostwhitecrab-0.9.1.ebuild,
  +ghostwhitecrab-0.9.2.ebuild:
  Stable x86 and hppa and new testing version.

  30 Nov 2004; Jon Hood <squinky86@gentoo.org> ghostwhitecrab-0.9.1.ebuild:
  Marked ~hppa.

*ghostwhitecrab-0.9.1 (24 Nov 2004)

  24 Nov 2004; Jon Hood <squinky86@gentoo.org> +metadata.xml,
  +files/gwc.init, +ghostwhitecrab-0.9.1.ebuild:
  Initial import, ebuild by me.
