@@ -1,0 +1,3 @@
+MD5 868b2800bc675f9226d6a668030a8aa9 gwc-0.9.9.tar.bz2 177226
+RMD160 95f97a1398a4f1f99554d9ff43281ef21d3f3790 gwc-0.9.9.tar.bz2 177226
+SHA256 bb910b5f524d21c3191414568c963af259d2b6298fe87fa09a468ca2be86ffce gwc-0.9.9.tar.bz2 177226
