@@ -1,6 +1,13 @@
 # ChangeLog for net-p2p/ghostwhitecrab
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ghostwhitecrab/Attic/ChangeLog,v 1.9 2007/01/21 17:12:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ghostwhitecrab/Attic/ChangeLog,v 1.10 2007/03/15 12:50:44 armin76 Exp $
+
+*ghostwhitecrab-0.9.9 (15 Mar 2007)
+
+  15 Mar 2007; Raúl Porcel <armin76@gentoo.org>
+  +ghostwhitecrab-0.9.9.ebuild:
+  Version bump, thanks to Jon Hood <squinky86 at gmail dot com> for the
+  ebuild, bug 170991
 
   21 Jan 2007; Raúl Porcel <armin76@gentoo.org>
   -ghostwhitecrab-0.9.1.ebuild, -ghostwhitecrab-0.9.2.ebuild:
